Java 8 compatibility, inner class example